Update and rename README.md to saitweb.html

--- a/saitweb.html
+++ b/saitweb.html
@@ -1182,7 +1182,26 @@
            - For avatar upload: /user/avatar -> accept file, store and return URL
            - Consider using sqlite/mysql; for C++ server use Boost.Beast or cpp-httplib + SMTP client or call external email API
         */
+
     </script>
+    <!DOCTYPE html>
+    <html>
+
+    <head>
+        <meta charset="UTF-8" />
+        <title>Mocki WebApp</title>
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
+        <script defer src="main.js"></script>
+    </head>
+
+    <body>
+        <h2>Добро пожаловать, Mocki!</h2>
+        <div id="profile"></div>
+        <input type="file" id="avatarInput" />
+    </body>
+
+    </html>
+
 </body>
 
 </html>
