--- a/index.html
+++ b/index.html
@@ -800,9 +800,9 @@
   <script>
     AOS.init({ duration: 800, once: true, easing: 'ease-out-cubic' });
 
-    // ---------- CONFIG ----------
-    const API_BASE = "https://authsrv.onrender.com"; // <-- проверь здесь, при необходимости поменяй
-    const GROQ_ENDPOINT = `${API_BASE}/groq`;        // ожидаемый endpoint для GROQ
+    
+    const API_BASE = "https://authsrv-1.onrender.com"; 
+    const GROQ_ENDPOINT = `${API_BASE}/groq`;      
     const AUTH_ENDPOINT = `${API_BASE}/auth/telegram`;
     const ME_ENDPOINT = `${API_BASE}/me`;
     const AVATAR_ENDPOINT = `${API_BASE}/user/avatar`;
